--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,20 @@
 .main-body{
     width: 100%;
-    height: 100%;
+    height: 100vh;
+    display: flex;
     flex-direction: column;
     justify-content: center;
+    background-image: url("https://images.unsplash.com/photo-1505144566083-38fb92594b3a?q=80&w=1974&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D");
+    background-size: cover; /* or contain, stretch, etc. */
+    background-position: center; /* or top, bottom, left, right, etc. */
+}
+
+.timer-body{
+    width: fit-content;
+    height: fit-content;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin: auto;
 }
